--- a/src/layouts/UserLayout.less
+++ b/src/layouts/UserLayout.less
@@ -1,11 +1,17 @@
-@import '~antd/es/style/themes/default.less';
+@import "~antd/es/style/themes/default.less";
 
 .container {
   display: flex;
   flex-direction: column;
   height: 100vh;
   overflow: auto;
-  background: @layout-body-background;
+  //background: @layout-body-background;
+  background-image: -webkit-linear-gradient(
+      rgba(0, 0, 0, 0.2),
+      rgba(0, 0, 0, 0.2)
+    ),
+    url("../assets/bg.jpeg");
+  //background:'../assets/bg.jpeg';
 }
 
 .lang {
@@ -25,10 +31,15 @@
 
 @media (min-width: @screen-md-min) {
   .container {
-    background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
-    background-repeat: no-repeat;
-    background-position: center 110px;
-    background-size: 100%;
+    background-image: -webkit-linear-gradient(
+        rgba(0, 0, 0, 0.2),
+        rgba(0, 0, 0, 0.2)
+      ),
+      url("../assets/bg.jpeg");
+    // background-image: url('https://gw.alipayobjects.com/zos/rmsportal/TVYTbAXWheQpRcWDaDMu.svg');
+    // background-repeat: no-repeat;
+    // background-position: center 110px;
+    // background-size: 100%;
   }
 
   .content {
@@ -57,15 +68,21 @@
 .title {
   position: relative;
   top: 2px;
-  color: @heading-color;
+  //color: @heading-color;
+  color: white;
   font-weight: 600;
   font-size: 33px;
-  font-family: Avenir, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-family: Avenir, "Helvetica Neue", Arial, Helvetica, sans-serif;
 }
 
 .desc {
   margin-top: 12px;
   margin-bottom: 40px;
-  color: @text-color-secondary;
+  //color: @text-color-secondary;
+  color: white;
   font-size: @font-size-base;
+}
+
+.headertop {
+  margin-top: 60px;
 }
